[package]
name = "new-test"
version = "0.1.0"
authors = ["Tuong Nguyen <tuongn09@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.tokio]
version = "1"
features = ["rt", "net", "time"]

[build-dependencies]
cc    = "1.0"
vcpkg = "0.2"
