[package]
name = "new-test"
version = "0.1.0"
authors = ["Tuong Nguyen <tuongn09@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[src]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
bytes        = "1"
farmhash     = "1.1"
fs2          = "0.4"
json         = "0.12"
openssl      = "0.10"
time         = "0.1"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.lazy_static]
version = "1.3"

[dependencies.libc]
version = "0.2"

[dependencies.tokio]
version = "1"
features = ["rt", "net", "time"]

[dependencies.tokio-util]
version = "0.6"
features = ["codec", "io"]

[dependencies.uuid]
version  = "0.8"
features = ["v4"]

[build-dependencies]
cc    = "1.0"
vcpkg = "0.2"